--- a/src/post.css
+++ b/src/post.css
@@ -8,28 +8,27 @@
     color: white;
 }
 
+.post-header-text {
+    width: 680px;
+}
+
 .post-body {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0;
-    margin: 10px 20px 10px 20px;
-
+    align-items: center;
+    padding-top: 3em;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.2em;
 }
 
 .post-text {
-    margin: .8em 8px 0 8px;
+    margin: .8em 16px 0 16px;
+    max-width: 680px;
+    color: #333;
+    line-height: 1.8em;
     font-family: 'Open Sans', sans-serif;
 }
 
-@media (min-width: 70em) {
-    .post-body {
-        margin: 10px 20% 0 20%;
-    }
-    .post-header {
-        display: block;
-        padding: 5% 20% 8px 20%;
-    }
+.post-video {
+    margin: 2em;
 }
